--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>School Nightmares</h2>
+							<h2><b>School Nightmares</b></h2>
 							<p>[Breve descripcion 1]<br />
-							[Breve descripvion 2].</p>
+							[Breve descripcion 2].</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
