--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Aqui podría ir la descripción pequeña</h2>
-										<p>Pos eso</p>
+										<h2>Aqui podría ir la descripción pequeña resumida</h2>
+										<p>Pos eso aqui va la descripcion hostias</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -70,12 +70,12 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Pequeña descripcion de algo</h2>
+							<p>Explicamos la descripcion y luego al  darle al boton te manda a un sitio con muchas mas cosas</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Esto podemos dejarlo sin nada o incluso quitarlo porque no sirve de una puta mierda</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://www.youtube.com/watch?v=YT5WGXw86e4&list=RDMM&start_radio=1&rv=Jfd_33JzhIs" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
