--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">No se pa que sirve este boton JSJSJSJS	</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -166,12 +166,12 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Formulario</h2>
+							<p>Toma gilipollas por si te quieres enterar de más de nuestro puto juego de mierda</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
+								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Mete tu email soplapollas" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
 							</div>
 						</form>
