--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</section>
 			
 			<!-- Four -->
-				<section id="three" class="spotlight style3 left">
+				<section id="three" class="spotlight style3 right">
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
