--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 					<h1 id="logo"><a href="index.html">School Nightmares</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="left-sidebar.html">Layouts</a></li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="left-sidebar.html">El juego</a></li>
+							<li><a href="elements.html">Apoyar</a></li>
 						</ul>
 					</nav>
 				</header>
