--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -80,6 +80,7 @@
 											<li>Blandit massa non blandit tempor interdum.</li>
 											<li>Lacinia mattis arcu nascetur lobortis.</li>
 										</ul>
+										<p>Por la cara te planto un puto trailer de Ghostwire Tokyo, que es nuestro juego literalmente</p>
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/XWpsAKYa7NQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</section>
 
