--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/pic04.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Otro titulo de algo por ejemplo la historia</h2>
@@ -97,7 +97,7 @@
 			
 			<!-- Four -->
 				<section id="three" class="spotlight style3 right">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/pic05.gif" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Artwork y concept art</h2>
