--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Mete tu email soplapollas" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
 							</div>
+							<form action="mailto:contacto@lineadecodigo.com" method="post" name="form1">
+  <label for="nombre">Nombre: </label>
+  <input id="nombre" name="nombre" type="text" />
+  <label for="email">Email: </label>
+  <input id="email" name="nombre" type="text" />
+  ¿Qué te pareció la página?
+  <textarea id="opinion" name="opinion"></textarea>
+  <input name="Submit" type="submit" value="Enviar" />
+</form>
 						</form>
 					</div>
 				</section>
