--- a/elements.html
+++ b/elements.html
@@ -85,7 +85,7 @@
 								<hr />
 
 								<h4>Blockquote</h4>
-								<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+								<blockquote> Es el mejor puto juego que he jugado en mi vida, sin duda es el GOTY  de este eño. Su gameplay y ambientación es demasiado buena y me recuerda a MAX PAIN.- Alfonso Cuadrado (Probablemente) </blockquote>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/L9gl6yBA7wU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								<h4>Preformatted</h4>
 								<pre><code>i = 0;
