--- a/index.html
+++ b/index.html
@@ -168,16 +168,13 @@
 							<p>Toma gilipollas por si te quieres enterar de más de nuestro puto juego de mierda</p>
 						</header>
 						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Mete tu email soplapollas" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
+							
 							<form action="mailto:contacto@lineadecodigo.com" method="post" name="form1">
   							<label for="nombre">Nombre: </label>
-  							<input id="nombre" name="nombre" type="text" />
+  							<input id="nombre" name="nombre" type="text" placeholder="Nombre" />
   							<label for="email">Email: </label>
-  							<input id="email" name="nombre" type="text" />
- 							 ¿Qué te pareció la página?
+  							<input id="email" name="nombre" type="text"  placeholder="Mete tu email soplapollas"/>
+ 							 ¿Qué te pareció la página? <br>
   							<textarea id="opinion" name="opinion"></textarea>
   							<input name="Submit" type="submit" value="Enviar" />
 							</form>
