--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 							<form action="mailto:contacto@lineadecodigo.com" method="post" name="form1">
   							<label for="nombre">Nombre: </label>
   							<input id="nombre" name="nombre" type="text" placeholder="Nombre" />
-  							<label for="email">Email: </label>
+  							 <br> <label for="email">Email: </label>
   							<input id="email" name="nombre" type="text"  placeholder="Mete tu email soplapollas"/>
- 							 ¿Qué te pareció la página? <br>
-  							<textarea id="opinion" name="opinion"></textarea>
-  							<input name="Submit" type="submit" value="Enviar" />
+ 							 <br> ¿Qué te pareció la página? 
+  							<textarea id="opinion" name="opinion"></textarea> 
+  							 <br> <input name="Submit" type="submit" value="Enviar" />
 							</form>
 						</form>
 					</div>
