--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Aqui podría ir la descripción pequeña resumida</h2>
-										<p>Pos eso aqui va la descripcion hostias</p>
+										<h2>Ayuda Suzuki Shinji a escapar de su escuela, que está infestada de hordas de monstruos.</h2>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p> Aquí podemos meter la descripcion pequeña donde explicamos el juego muy por encima</p>
+									<p> Cuando Shuzuki Shinji despierta en su habitación del internado, todo parece normal. Sin embargo, en cuanto sale de su habitación se da cuenta de que unas criaturas desfiguradas se interponen en su camino, impidiéndole cualquier intento de huída. Además, a través de su preciado walkie-talkie puede escuchar a su amiga, Miyazaki Chihiro pidiéndole ayuda, pues aparentemente se encuentra atrapada en una habitación rodeada de monstruos. Con la ayuda de sus misteriosamente adquiridos poderes sobrenaturales, Shinji se enfrentará a los misteriosos seres que merodean por el recinto con el fin de rescatar a Chihiro, e intentando descubrir qué ha provocado dicha situación y qué es el misterioso monstruo con forma de kitsune que parece tener la capacidad de controlar a las demás criaturas.</p>
+
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Tengo la camisa negra porque negra tengo el alma</p>
