--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
-							<li><a href="left-sidebar.html">El juego</a></li>
-							<li><a href="elements.html">Apoyar</a></li>
+							<li><a href="left-sidebar.html">Campaña</a></li>
+							<li><a href="elements.html">Q&A</a></li>
+							<li><a href="elements.html">Foro</a></li>
 						</ul>
 					</nav>
 				</header>
