--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="left-sidebar.html">Campaña</a></li>
-							<li><a href="elements.html">Q&A</a></li>
+							<li><a href="Q&A.html">Q&A</a></li>
 							<li><a href="elements.html">Foro</a></li>
 						</ul>
 					</nav>
