--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
 					<span class="image fit main"><img src="images/pic03.gif" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Pequeña descripcion de algo, por ejemplo gameplay</h2>
-							<p>Explicamos la descripcion y luego al  darle al boton te manda a un sitio con muchas mas cosas</p>
-						</header>
-						<p>Esto podemos dejarlo sin nada o incluso quitarlo porque no sirve de una puta mierda</p>
+							<h2>Descubre School Nightmares al completo</h2>
+							<p>Encuentra toda la información relativa al juego, como su historia, trailers, artwork , como apoyarnos y más.</p>
+						</header>						
 						<ul class="actions">
-							<li><a href="https://www.youtube.com/watch?v=YT5WGXw86e4&list=RDMM&start_radio=1&rv=Jfd_33JzhIs" class="button">Learn More</a></li>
+							<li><a href="left-sidebar.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
