--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 					<div class="content">
 						<header>
 							<h2>Descubre School Nightmares al completo</h2>
-							<p>Encuentra toda la información relativa al juego, como su historia, trailers, artwork , como apoyarnos y más.</p>
+							<p>Encuentra toda la información relativa al juego, como su historia, trailer, artwork, gameplay, como apoyarnos y más.</p>
 						</header>						
 						<ul class="actions">
-							<li><a href="left-sidebar.html" class="button">Learn More</a></li>
+							<li><a href="campaña.html" class="button">Vamos allá</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
