--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
-							<li><a href="left-sidebar.html">Campaña</a></li>
+							<li><a href="campaña.html">Campaña</a></li>
 							<li><a href="Q&A.html">Q&A</a></li>
 							<li><a href="elements.html">Foro</a></li>
 						</ul>
@@ -85,12 +85,12 @@
 					<span class="image fit main bottom"><img src="images/pic04.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Otro titulo de algo por ejemplo la historia</h2>
-							<p>Algo tipo descubre los terribles acontecimientos o yo que se y que te mande a una pagina con toda la puta historia resumida</p>
+							<h2>Q&A</h2>
+							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
 						<p>Lo que sea o se quita</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Vamos allá</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
