--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 							<h2>Q&A</h2>
 							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
-						<p>Lo que sea o se quita</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Vamos allá</a></li>
 						</ul>
@@ -101,12 +100,11 @@
 					<span class="image fit main bottom"><img src="images/pic05.gif" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Artwork y concept art</h2>
-							<p>Descubra como tony es explotado para que cree artwork </p>
+							<h2>Foro del juego</h2>
+							<p> ¡Comunícate con otros fans del juego para compartir fanarts, teorías y preguntas!</p>
 						</header>
-						<p>Lo que sea o se quita</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="foro.html" class="button">Vamos allá</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
