--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
 						<ul class="actions">
-							<li><a href="#" class="button">Vamos allá</a></li>
+							<li><a href="Q&A.html" class="button">Vamos allá</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
