--- a/index.html
+++ b/index.html
@@ -168,15 +168,30 @@
 						</header>
 						<form method="post" action="#" class="cta">
 							
-							<form action="mailto:contacto@lineadecodigo.com" method="post" name="form1">
-  							<label for="nombre">Nombre: </label>
-  							<input id="nombre" name="nombre" type="text" placeholder="Nombre" />
-  							 <br> <label for="email">Email: </label>
-  							<input id="email" name="nombre" type="text"  placeholder="Mete tu email soplapollas"/>
- 							 <br> ¿Qué te pareció la página? 
-  							<textarea id="opinion" name="opinion"></textarea> 
-  							 <br> <input name="Submit" type="submit" value="Enviar" />
-							</form>
+							<form action="https://formspree.io/mbjzbwaj" method="POST" id="my-form">
+
+      <div class="form-group">
+        <label for="firstName"> First Name</label>
+        <input type="text" id="firstName" name="firstName">
+      </div>
+
+      <div class="form-group">
+        <label for="latsName">Last Name</label>
+        <input type="text" id="lastName" name="lastName">
+    	  </div>
+
+     			 <div class="form-group">
+      				  <label for="email">Email</label>
+      	  <input type="email" id="email" name="email">
+     		 </div>
+
+      			<div class="form-group">
+       		 <label for="massage">Massage</label>
+        			<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
+      			</div>
+
+      						<button type="submit">Submit</button>
+   
 						</form>
 					</div>
 				</section>
