--- a/index.html
+++ b/index.html
@@ -170,25 +170,20 @@
 							
 							<form action="https://formspree.io/f/xjvlawrb" method="POST" id="my-form">
 
-      <div class="form-group">
-        <label for="firstName"> First Name</label>
-        <input type="text" id="firstName" name="firstName">
-      </div>
+      								<div class="form-group">
+       									 <label for="firstName"> Nombre</label>
+       									 <input type="text" id="firstName" name="firstName">
+    								  </div>
 
-      <div class="form-group">
-        <label for="latsName">Last Name</label>
-        <input type="text" id="lastName" name="lastName">
-    	  </div>
+     			 					<div class="form-group">
+      				  					<label for="email">Email</label>
+      	  								<input type="email" id="email" name="email">
+     		 						</div>
 
-     			 <div class="form-group">
-      				  <label for="email">Email</label>
-      	  <input type="email" id="email" name="email">
-     		 </div>
-
-      			<div class="form-group">
-       		 <label for="massage">Massage</label>
-        			<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
-      			</div>
+      								<div class="form-group">
+       									 <label for="massage">Mensaje</label>
+        								<textarea name="massage" id="massage" cols="30" rows="10"></textarea>
+      								</div>
 
       						<button type="submit">Submit</button>
    
