--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						</header>
 						<form method="post" action="#" class="cta">
 							
-							<form action="https://formspree.io/f/xjvlawrb" method="POST" id="my-form">
+							<form action="" method="POST" id="my-form">
 
       								<div class="form-group">
        									 <label for="firstName"> Nombre</label>
