--- a/campaña.html
+++ b/campaña.html
@@ -20,10 +20,11 @@
 					<h1 id="logo"><a href="index.html">School Nightmares</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="left-sidebar.html">Layouts</a></li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="campaña.html">Campaña</a></li>
+							<li><a href="Q&A.html">Q&A</a></li>
+							<li><a href="foro.html">Foro</a></li>
+							
 						</ul>
 					</nav>
 				</header>
@@ -32,8 +33,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>El juego</h2>
-							<p>LOLOLOLOLO Esto es nuestro juego</p>
+							<h2>Campaña</h2>
+							<p>Descubre todo acerca de School Nightmares</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -41,25 +42,36 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Gameplay</h3>
-											<p>Aqui podemos decir que su gameplay es la polla y creamos otro archivo para que si le das al puto botón de abajo te mande alli</p>
+											<p>Descubre aquí el fanático gameplay del juego</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="#" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Artwork</h3>
-											<p>Descubra el maravilloso artwork de nuestro puto juegazo creado por el mismisimo Tony </p>
+											<p>Descubra arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="#" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
+										<hr />
+										<section>
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+											<h3>Artwork</h3>
+											<p>Descubra la historia de School Nightmares</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="#" class="button">Saber más</a></li>
+												</ul>
+											</footer>
 									</section>
 
 							</div>
