--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/_SchoolNight_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -198,6 +198,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<p>Toma gilipollas por si te quieres enterar de más de nuestro puto juego de mierda</p>
 					</ul>
 				</footer>
 
