--- a/campaña.html
+++ b/campaña.html
@@ -81,7 +81,9 @@
 									<section id="content">
 										
 										<h3>Descubre el primer trailer de School Nightmares</h3>
+										<center>
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/r0Ip0ee7qso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</center>
 										<h3>Banda sonora</h3>
 										<p>Primera canción original de School Nightmares</p>
 										
