--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<p>Encuentra toda la información relativa al juego, como su historia, trailer, artwork, gameplay, como apoyarnos y más.</p>
 						</header>						
 						<ul class="actions">
-							<li><a href="campaña.html" class="button">Vamos allá</a></li>
+							<li><a href="campaña.html" class="button">Saber más</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -89,7 +89,7 @@
 							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
 						<ul class="actions">
-							<li><a href="Q&A.html" class="button">Vamos allá</a></li>
+							<li><a href="Q&A.html" class="button">Saber más</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -104,7 +104,7 @@
 							<p> ¡Comunícate con otros fans del juego para compartir fanarts, teorías y preguntas!</p>
 						</header>
 						<ul class="actions">
-							<li><a href="foro.html" class="button">Vamos allá</a></li>
+							<li><a href="foro.html" class="button">Saber más</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
