--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						</header>
 						<form method="post" action="#" class="cta">
 							
-							<form action="" method="POST" id="my-form">
+							<form action="”mailto:mg.diego001@gmail.com”" method="POST" id="my-form">
 
       								<div class="form-group">
        									 <label for="firstName"> Nombre</label>
