Added form something

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<h2>Formulario</h2>
 							<p>Toma gilipollas por si te quieres enterar de más de nuestro puto juego de mierda</p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="post" action="https://script.google.com/macros/s/AKfycbyffHuCw6-kW1Cgo9wz4ptcSkAi7B7c9JtUjVbwbY2IDUI_yo0-PWS4gf6wKtyx7mdHVQ/exec" class="cta">
 							
 							<form action="contact.php" method="POST" id="my-form">
 
