--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				<footer id="footer">
 					<ul class="icons">
 						<li><a href="https://twitter.com/_SchoolNight_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
@@ -219,6 +219,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+	
 	</body>
 </html>
