--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/_SchoolNight_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
-						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
