--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.gif" alt="" /></span>
+					<span class="image fit main"><img src="images/puertatoori.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Descubre School Nightmares al completo</h2>
