--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
-						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
+						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
