--- a/index.html
+++ b/index.html
@@ -114,40 +114,40 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Algo tipo CARACTERÍSTICAS</h2>
-							<p>Descubra los puntos principales de este juego</p>
+							<h2>El equipo de Dark Lighting Software.</h2>
+							<p>Descubre quienes somos y que hacemos cada uno en el juego</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p> Gameplay frenetico</p>
+									<h3>Mario González</h3>
+									<p> Modelado 3D de escenarios y personajes</p>
+									<p>(Programación página web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p> Multimedia es una puta mierda</p>
+									<h3>Antonio López</h3>
+									<p>Arte conceptual de personajes y escenarios</p>
+									<p>(Arte conceptual)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Historia terrorífica</p>
+									<h3>Diego Martínez</h3>
+									<p>Programación</p>
+									<p>(Programación de la pagina web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>No se que mas poner ayuda</p>
+									<h3>Sancho Quesada</h3>
+									<p>Música</p>
+									<p>(Música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Me tienen secuestrado en un sotano de Seattle ayuda</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Tonto el que lo lea</p>
+									<h3>Andrés Ruiz</h3>
+									<p>Diseño de la historia y el gameplay</p>
+									<p>(Diseño de la historia)</p>
 								</section>
 							</div>
 						</div>
@@ -159,7 +159,7 @@
 					<div class="container">
 						<header>
 							<h2>Formulario</h2>
-							<p>Toma gilipollas por si te quieres enterar de más de nuestro puto juego de mierda</p>
+							<p>Déjanos aquí tus comentarios y sugerencias sobre el juego.¡Tu opinión nos importa!</p>
 						</header>
 						<form method="post" action="https://script.google.com/macros/s/AKfycbyffHuCw6-kW1Cgo9wz4ptcSkAi7B7c9JtUjVbwbY2IDUI_yo0-PWS4gf6wKtyx7mdHVQ/exec" class="cta">
 							
