--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
 									<h3>Andrés Ruiz</h3>
-									<p>Diseño de la historia y el gameplay</p>
-									<p>(Diseño de la historia)</p>
+									<p>Guión y diseño de gameplay</p>
+									<p>(Historia del juego)</p>
 								</section>
 							</div>
 						</div>
