--- a/campaña.html
+++ b/campaña.html
@@ -43,8 +43,19 @@
 									<section id="sidebar">
 										<section>
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+											<h3>Historia</h3>
+											<p>Descubre aquí todo sobre la historia de nuesto juego</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="#" class="button">Saber más</a></li>
+												</ul>
+											</footer>
+										</section>
+										<hr />
+										<section>
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Gameplay</h3>
-											<p>Descubre aquí el fanático gameplay del juego</p>
+											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Saber más</a></li>
@@ -55,18 +66,7 @@
 										<section>
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Artwork</h3>
-											<p>Descubra arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Saber más</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Artwork</h3>
-											<p>Descubra la historia de School Nightmares</p>
+											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Saber más</a></li>
