--- a/campaña.html
+++ b/campaña.html
@@ -47,7 +47,7 @@
 											<p>Descubre aquí todo sobre la historia de nuesto juego</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Saber más</a></li>
+													<li><a href="historia.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -58,7 +58,7 @@
 											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Saber más</a></li>
+													<li><a href="gameplay.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -69,7 +69,7 @@
 											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Saber más</a></li>
+													<li><a href="artwork.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 									</section>
