--- a/campaña.html
+++ b/campaña.html
@@ -89,13 +89,55 @@
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/r0Ip0ee7qso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<h3><u>Tabla de contribuciones</u></h3>
 										<p>Descubre como puedes ayudarnos a financiar el juego y los regalos que puedes obtener según la cantidad que dones</p>
-										
-									</section>
-
-							</div>
-						</div>
-					</div>
-				</div>
+										<section>
+											<h3>Table</h3>
+											<h4>Default</h4>
+												<div class="table-wrapper">
+													<table>
+														<thead>
+															<tr>
+																<th>Name</th>
+																<th>Description</th>
+																<th>Price</th>
+															</tr>
+														</thead>
+													<tbody>
+															<tr>
+																<td>Item 1</td>
+																<td>Ante turpis integer aliquet porttitor.</td>
+																<td>29.99</td>
+															</tr>
+															<tr>
+																<td>Item 2</td>
+																<td>Vis ac commodo adipiscing arcu aliquet.</td>
+																<td>19.99</td>
+															</tr>
+															<tr>
+																<td>Item 3</td>
+																<td> Morbi faucibus arcu accumsan lorem.</td>
+																<td>29.99</td>
+															</tr>
+															<tr>
+																<td>Item 4</td>
+																<td>Vitae integer tempus condimentum.</td>
+																<td>19.99</td>
+															</tr>
+															<tr>
+																<td>Item 5</td>
+																<td>Ante turpis integer aliquet porttitor.</td>
+																<td>29.99</td>
+															</tr>
+													</tbody>
+													<tfoot>
+															<tr>
+																<td colspan="2"></td>
+																<td>100.00</td>
+															</tr>
+													</tfoot>
+												</table>
+											</div>	
+												
+										</section>
 
 			<!-- Footer -->
 				<footer id="footer">
