--- a/campaña.html
+++ b/campaña.html
@@ -138,6 +138,8 @@
 											</div>	
 												
 										</section>
+										<h3><u>Objetivos</u></h3>
+										<p>Estos son los objetivos que tenemos como parte de esta campaña de financiación</p>
 
 			<!-- Footer -->
 				<footer id="footer">
