--- a/campaña.html
+++ b/campaña.html
@@ -150,7 +150,7 @@
 						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
 						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 					</ul>
-					<u>
+					<center>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<p></p>
@@ -158,7 +158,7 @@
 						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
 						
 					</ul>
-					</u>
+					</center>
 				</footer>
 
 		</div>
