--- a/historia.html
+++ b/historia.html
@@ -41,22 +41,34 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Gameplay</h3>
+											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="gameplay.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Artwork</h3>
+											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="artwork.html" class="button">Saber más</a></li>
+												</ul>
+											</footer>
+										</section>
+										<hr />
+										<section>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Campaña</h3>
+											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="artwork.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
