--- a/historia.html
+++ b/historia.html
@@ -78,10 +78,9 @@
 							<div class="col-8 col-12-medium imp-medium">
 
 								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
+									<section id="content">										
+										<h3>Historia</h3>
+										<p>Aquí va la descripción media que tenemos que hacer</p>
 										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
 										<h3>Sed Magna Ornare</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
@@ -102,15 +101,19 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						
+						<li><a href="https://twitter.com/_SchoolNight_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://twitter.com/elxokas" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
+						<li><a href="https://www.youtube.com/watch?v=GxM3wstBcD4" class="icon brands alt fa-paypal"><span class="label">Paypal</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<p></p>
+						<p>ATENCIÓN: Esta página simula la campaña de microfinanciación de un videojuego ficticio y no representa un producto real.</p>
+						<p>Práctica de Multimedia, 1º GDDV - Curso 21/22 (Móstoles), URJC. La URJC no se hace responsable del contenido expuesto por el autor</p>
+						
 					</ul>
 				</footer>
 
