--- a/historia.html
+++ b/historia.html
@@ -68,7 +68,7 @@
 											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="artwork.html" class="button">Saber más</a></li>
+													<li><a href="campaña.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
