--- a/gameplay.html
+++ b/gameplay.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Landed by HTML5 UP</title>
+		<title>Gameplay</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,29 +17,15 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">School Nightmares</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="campaña.html">Campaña</a>
+						<li><a href="Q&A.html">Q&A</a></li>
+						<li><a href="foro.html">Foro</a></li>
+							
 						</ul>
 					</nav>
 				</header>
@@ -48,8 +34,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Left Sidebar</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Gameplay</h2>
+							<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -57,22 +43,34 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Historia</h3>
+											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="historia.htlm" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Artwork</h3>
+											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="artwork.html" class="button">Saber más</a></li>
+												</ul>
+											</footer>
+										</section>
+										<hr />
+										<section>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Campaña</h3>
+											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="campaña.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
