--- a/campaña.html
+++ b/campaña.html
@@ -44,7 +44,7 @@
 										<section>
 											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Historia</h3>
-											<p>Descubre aquí todo sobre la historia de nuesto juego</p>
+											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="historia.html" class="button">Saber más</a></li>
