--- a/gameplay.html
+++ b/gameplay.html
@@ -48,7 +48,7 @@
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="historia.htlm" class="button">Saber más</a></li>
+													<li><a href="historia.html" class="button">Saber más</a></li>
 												</ul>
 											</footer>
 										</section>
