--- a/campaña.html
+++ b/campaña.html
@@ -42,7 +42,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<img src="puertatoori.jpg">
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Historia</h3>
 											<p>Descubre aquí todo sobre la historia de nuestro juego</p>
 											<footer>
@@ -53,7 +53,7 @@
 										</section>
 										<hr />
 										<section>
-											<img src="puertatoori.jpg">
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Gameplay</h3>
 											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
@@ -64,7 +64,7 @@
 										</section>
 										<hr />
 										<section>
-											<img src="puertatoori.jpg">
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Artwork</h3>
 											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
