--- a/artwork.html
+++ b/artwork.html
@@ -61,6 +61,17 @@
 												</ul>
 											</footer>
 										</section>
+										<hr/>
+										<section>
+											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<h3>Campaña</h3>
+											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="campaña.html" class="button">Saber más</a></li>
+												</ul>
+											</footer>
+										</section>
 									</section>
 
 							</div>
