--- a/campaña.html
+++ b/campaña.html
@@ -152,6 +152,7 @@
 			
 
 		</div>
+		<div id="main" class="wrapper style1">
 		<div class="container">
 				
 			<footer id="footer">
@@ -175,7 +176,8 @@
 			</footer>
 
 		</div>					
-
+		</div>	
+								
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
