--- a/campaña.html
+++ b/campaña.html
@@ -153,9 +153,8 @@
 
 		</div>
 		<div id="main" class="wrapper style1">
-		<div class="container">
-				
-			<footer id="footer">
+		<header class="major">
+							<footer id="footer">
 					<ul class="icons">
 						<li><a href="https://twitter.com/_SchoolNight_" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCEu6vwnj0UsZvHfIECkk5Uw" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
@@ -174,8 +173,7 @@
 						
 					</ul>
 			</footer>
-
-		</div>
+		</header>
 			
 			<footer id="footer">
 					<ul class="icons">
