--- a/campaña.html
+++ b/campaña.html
@@ -152,7 +152,8 @@
 			
 
 		</div>
-		<div id="main" class="wrapper style1">
+		<section id="banner">
+					<div class="content">
 			
 			<footer id="footer">
 					<ul class="icons">
@@ -175,6 +176,9 @@
 			</footer>
 			
 		</div>	
+			
+		</section>
+
 								
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
