--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									<p>(Música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
+									<span class="image"><img src="images/andres.jpg" alt="" /></span>
 									<h3>Andrés Ruiz</h3>
 									<p>Guión y diseño de gameplay</p>
 									<p>(Historia del juego)</p>
