--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Mario González</h3>
-									<p> Modelado 3D de escenarios y personajes</p>
-									<p>(Programación página web)</p>
+									<img class="rounded-circle" width=200px height=200px src="images/mario.jpg" alt="" />
+									<h3 align=center>Mario González</h3>
+									<p align=center> Modelado 3D de escenarios y personajes</p>
+									<p align=center>(Programación página web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
-									<h3>Antonio López</h3>
-									<p>Arte conceptual de personajes y escenarios</p>
-									<p>(Arte conceptual)</p>
+									<img class="rounded-circle" width=200px height=200px src="images/tony.jpg" alt="" />
+									<h3 align=center>Antonio López</h3>
+									<p align=center>Arte conceptual de personajes y escenarios</p>
+									<p align=center>(Arte conceptual)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Diego Martínez</h3>
-									<p>Programación</p>
-									<p>(Programación de la pagina web)</p>
+									<img class="rounded-circle" width=200px height=200px src="images/diego.jpg" alt="" />
+									<h3 align=center>Diego Martínez</h3>
+									<p align=center>Programación</p>
+									<p align=center>(Programación de la pagina web)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Sancho Quesada</h3>
-									<p>Música</p>
-									<p>(Música)</p>
+									<img class="rounded-circle" width=200px height=200px src="images/sancho.jpg" alt="" />
+									<h3 align=center>Sancho Quesada</h3>
+									<p align=center>Música</p>
+									<p align=center>(Música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img class="rounded-circle" width=200px height=200px src="images/andres.jpg" alt="" />
