--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="campaña.html">Campaña</a></li>
-							<li><a href="FAQ.html">Q&A</a></li>
+							<li><a href="Q&A.html">Q&A</a></li>
 							<li><a href="foro.html">Foro</a></li>
 						</ul>
 					</nav>
@@ -86,7 +86,7 @@
 					<span class="image fit main bottom"><img src="images/pic04.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>FAQ</h2>
+							<h2>Q&A</h2>
 							<p>Encuentra la respuesta a las posibles preguntas que puedas tener sobre School Nightmares</p>
 						</header>
 						<ul class="actions">
