--- a/campaña.html
+++ b/campaña.html
@@ -97,7 +97,7 @@
 														<thead>
 															<tr>
 																<th>Nombre</th>
-																<th>Descripciónn</th>
+																<th>Descripción</th>
 																<th>Precio</th>
 															</tr>
 														</thead>
